--- a/example/helloworld/index.html
+++ b/example/helloworld/index.html
@@ -6,10 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .red {
+            color: red;
+        }
+        .green {
+            background: green;
+        }
+    </style>
 </head>
 
 <body>
-    <div class="app"></div>
+    <div id="app"></div>
     <script type="module" src="./main.js"></script>
 </body>
 
